<resources>
    <string name="app_name">KickboxingSLife</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--UserActivity-->

    <string name="userActivity_title_home">Bài tập</string>
    <string name="userActivity_title_advertisement">Giới thiệu</string>
    <string name="userActivity_title_setting">Thông tin</string>
    <!--UserActivity-->


    <!--SettingActivity-->
    <string name="settingactivity_setting_usernarm">Chỉnh sửa</string>
    <string name="settingactivity_setting_account">Tài Khoản</string>
    <string name="settingactivity_setting_for_get_password">Đổi mật khẩu</string>
    <string name="settingactivity_setting_logout">Đăng xuất</string>
    <!--SettingActivity-->
    <!--SettingAccountActivity-->
    <string name="settingaccount_title">Thông tin cá nhân</string>
    <string name="settingaccountactivity_name">Họ và tên</string>
    <string name="settingaccountactivity_sex">Giới tính</string>
    <string name="settingaccountactivity_address">Địa Chỉ</string>
    <string name="settingaccountactivity_height">Chiều cao</string>
    <string name="settingaccountactivity_weight">Cân nặng</string>
    <string name="settingaccountactivity_year_old">Tuổi</string>
    <string name="settingaccountactivity_phone">Số điện thoại</string>
    <string name="settingaccountactivity_male">Nam</string>
    <string name="settingaccountactivity_year_oldfemale">Nữ</string>
    <string name="settingaccount_error_noname">Vui lòng nhập tên</string>
    <string name="settingaccount_error_noheight">Vui lòng nhập chiều cao</string>
    <string name="settingaccount_error_noweight">Vui lòng nhập cân nặng</string>
    <string name="settingaccount_error_noaddress">Vui lòng nhập địa chỉ</string>
    <string name="settingaccount_error_noage">Vui lòng nhập tuổi</string>
    <string name="settingaccount_error_nophone">Vui lòng nhập số điện thoại</string>
    <string name="settingaccount_error_nogender">Vui lòng chọn giới tính</string>
    <string name="settingaccount_error_noavatar">Vui lòng chọn ảnh đại diện</string>
    <string name="settingaccount_toast_imageurl_failed">get image download url failed!</string>
    <string name="settingaccount_toast_uploadimage_failed">upload image task failed!</string>
    <string name="settingaccount_toast_success">Cập nhật thông tin thành công</string>


    <!--SettingAccountActivity-->
    <!-- navigation-->
    <!--fragment_repost-->
    <string name="frament_repost_bossname">Đại Diện:</string>
    <string name="frament_repost_roomname">Tên Quán:</string>
    <string name="frament_repost_phone">Số điện thoại:</string>
    <string name="frament_repost_address">Địa chỉ:</string>
    <!--fragment_repost-->
    <!-- navigation-->



    <!-- HomeFragment-->
    <string name="home_tv_stomachchallenge">Tập bụng</string>
    <string name="home_tv_chestchallenge">Tập ngực</string>
    <string name="home_tv_handchallenge">Tập tay</string>
    <string name="home_tv_legchallenge">Tập chân</string>
    <!-- HomeFragment-->

    <!--AdminActivity-->
    <string name="admin_bottomnav_chest">Tập ngực</string>
    <string name="admin_bottomnav_hand">Tập tay</string>
    <string name="admin_bottomnav_stomach">Tập bụng</string>
    <string name="admin_bottomnav_leg">Tập chân</string>
    <string name="admin_bottomnav_map">Địa điểm</string>
    <string name="admin_dialog_title">Xác nhận</string>
    <string name="admin_dialog_message">Bạn có muốn xóa bài tập này?</string>
    <string name="admin_dialog_yes">Có</string>
    <string name="admin_dialog_no">Không</string>
    <string name="admin_deleted">Đã xóa bài tập</string>
    <!--AdminActivity-->

    <!-- AddActivity -->
    <string name="add_title">Thêm bài tập</string>
    <string name="add_spinner_day1">Ngày 1</string>
    <string name="add_spinner_day2">Ngày 2</string>
    <string name="add_spinner_day3">Ngày 3</string>
    <string name="add_spinner_day4">Ngày 4</string>
    <string name="add_spinner_day5">Ngày 5</string>
    <string name="add_spinner_day6">Ngày 6</string>
    <string name="add_spinner_day7">Ngày 7</string>
    <string name="add_spinner_chest">Tập ngực</string>
    <string name="add_spinner_stomach">Tập bụng</string>
    <string name="add_spinner_hand">Tập tay</string>
    <string name="add_spinner_leg">Tập chân</string>
    <string name="add_toast_existed">Bài tập đã tồn tại!</string>
    <string name="add_toast_added">Bài tập đã được thêm</string>
    <string name="add_toast_failed">Thêm bài tập thất bại!</string>
    <string name="add_toast_require">Không được bỏ trống!</string>
    <string name="add_edt_hintname">Tên video</string>
    <string name="add_edt_hintcalo">Calo</string>
    <string name="add_btn_upload">Thêm bài tập</string>
    <string name="add_btn_choosevideo">Chọn video</string>
    <string name="add_btn_chooseimage">Chọn ảnh</string>
    <!-- AddActivity -->

    <!-- MapAddActivity -->
    <string name="mapadd_edt_hintroomname">Tên phòng tập</string>
    <string name="mapadd_edt_hintbossname">Tên ông chủ</string>
    <string name="mapadd_edt_hintsdt">Số điện thoại</string>
    <string name="mapadd_edt_hintaddress">Địa chỉ</string>
    <string name="mapadd_btn_add">Sửa thông tin</string>
    <string name="mapadd_toast_added">Sửa thông tin thành công</string>
    <string name="mapadd_toast_imageurl_failed">Get image download url failed!</string>
    <string name="mapadd_toast_uploadimage_failed">Upload image task failed!</string>
    <string name="mapadd_toast_require">Vui lòng nhập đầy đủ!</string>

    <!-- MapAddActivity -->

    <!-- EditActivity -->
    <string name="edit_toast_updated">Bài tập đã được cập nhật</string>
    <string name="edit_toast_failed">Cập nhật bài tập thất bại!</string>
    <string name="edit_toast_require">Không được bỏ trống!</string>
    <string name="edit_toast_videourl_failed">get video download url failed!</string>
    <string name="edit_toast_imageurl_failed">get image download url failed!</string>
    <string name="edit_toast_uploadvideo_failed">upload video task failed!</string>
    <string name="edit_toast_uploadimage_failed">upload image task failed!</string>
    <string name="edit_edt_hintname">Tên video</string>
    <string name="edit_edt_hintcalo">Calo</string>
    <string name="edit_btn_upload">Cập nhật</string>
    <string name="edit_btn_choosevideo">Chọn video</string>
    <string name="edit_btn_chooseimage">Chọn ảnh</string>

    <!-- EditActivity -->

    <!-- SignUpActivity -->
    <string name="sign_up_title">Đăng Ký</string>
    <string name="sign_up_error_nousername">Vui lòng nhập tài khoản!</string>
    <string name="sign_up_error_wrongusername">Tài khoản tối thiểu 6 ký tự!</string>
    <string name="sign_up_error_nopassword">Mật khẩu tối thiểu 6 ký tự!</string>
    <string name="sign_up_error_wrongpassword">Mật khẩu bạn nhập không đúng!</string>
    <string name="sign_up_error_noquestion">Vui lòng nhập câu trả lời!</string>
    <string name="sign_up_error_nophone">Vui lòng nhập số điện thoại!</string>
    <string name="sign_up_error_wrongphone">Số điện thoại không hợp lệ!</string>
    <string name="sign_up_error_existed">Tài khoản đã tồn tại!</string>
    <string name="sign_up_toast_success">Thêm tài khoản thành công</string>
    <string name="sign_up_toast_failed">Thêm tài khoản thất bại</string>
    <string name="sign_up_button_signin">Đăng Ký</string>
    <string name="sign_up_ed_username">Tài Khoản</string>
    <string name="sign_up_ed_password">Mật Khẩu</string>
    <string name="sign_up_ed_passwordcheck">Nhập Lại Mật Khẩu</string>
    <string name="sign_up_ed_phone">Số Điện Thoại</string>
    <string name="sign_up_ed_question">Câu Hỏi:Món ăn ưa thích của bạn là gì?</string>

    <!-- SignUpActivity -->

    <!-- SignInActivity -->
    <string name="sign_in_title">Đăng Nhập</string>
    <string name="sign_in_error_nousername">Vui lòng nhập tài khoản!</string>
    <string name="sign_in_error_wrongusername">Tài khoản tối thiểu 6 ký tự!</string>
    <string name="sign_in_error_nopassword">Mật khẩu tối thiểu 6 ký tự!</string>
    <string name="sign_in_error_wrongpassword">Mật khẩu bạn nhập không đúng!</string>
    <string name="sign_in_error_notcorrectusername">Tài khoản không tồn tại!</string>
    <string name="sign_in_error_notcorrectpassword">Mật khẩu không chính xác!</string>
    <string name="sign_in_toast_welcomeadmin">Chào mừng Admin</string>
    <string name="sign_in_toast_success">Đăng Nhập Thành công</string>
    <string name="sign_in_toast_failed">Đăng Nhập Thất Bại</string>
    <string name="sign_in_button_signin">Đăng Nhập</string>
    <string name="sign_in_ed_username">Tài Khoản</string>
    <string name="sign_in_ed_forgetpassword">Quên Mật Khẩu ?</string>
    <string name="sign_in_ed_sign_out">Đăng ký tài khoản</string>
    <string name="sign_in_ed_password">Mật Khẩu</string>

    <!-- SignInActivity -->

    <!-- ForgetPasswordActivity -->
    <string name="forget_password_title">Quên mật khẩu</string>
    <string name="forget_password_error_require">Không được bỏ trống!</string>
    <string name="forget_password_error_wrongusername">Tài khoản không chính xác!</string>
    <string name="forget_password_error_notcorrectusername">Tài khoản không tồn tại!</string>
    <string name="forget_password_error_notcorrectreply">Câu trả lời không chính xác!</string>
    <string name="forget_password_toast_failed">Lấy mật khẩu thất bại!</string>
    <string name="forget_password_button_getpassword">Lấy lại mật khẩu</string>
    <string name="forget_password_username">Tài Khoản</string>
    <string name="forget_password_phone">Số Điện Thoại</string>
    <string name="forget_password_reply">Trả lời</string>
    <string name="forget_password_question">Câu hỏi</string>
    <string name="forget_password_securityquestion">CÂU HỎI BẢO MẬT</string>

    <!-- ForgetPasswordActivity -->

    <!-- ChangePasswordActivity -->
    <string name="change_password_title">Đổi mật khẩu</string>
    <string name="change_password_error_nopassword">Vui lòng nhập mật khẩu!</string>
    <string name="change_password_error_wrongpassword">Mật khẩu tối thiểu 6 ký tự!</string>
    <string name="change_password_error_notcorrectpassword">Mật khẩu bạn nhập không đúng!</string>
    <string name="change_password_toast_success">Đổi mật khẩu thành công</string>
    <string name="change_password_button_changepassword">Đổi mật khẩu</string>
    <string name="change_password_ed_username">Tên tài khoản</string>
    <string name="change_password_password">Mật khẩu mới</string>
    <string name="change_password_password_check">Nhập lại mật khẩu</string>

    <!-- ChangePasswordActivity -->

    <!-- ShowExerciseUserActivity -->
    <string name="show_exercise_toast_noexercise">Không có bài tập</string>
    
    <!-- ShowExerciseUserActivity -->

    <!-- StartPracticeActivity -->
    <string name="start_practice_string_instruction1">Cố gắng lên</string>
    <string name="start_practice_string_instruction2">Chuẩn bị</string>
    <string name="start_practice_toast_congratulations">Chúc mừng bạn đã hoàn thành bài tập!!!</string>

    <!-- StartPracticeActivity -->

    <!-- Day -->
    <string name="btn_day1">Ngày 1</string>
    <string name="btn_day2">Ngày 2</string>
    <string name="btn_day3">Ngày 3</string>
    <string name="btn_day4">Ngày 4</string>
    <string name="btn_day5">Ngày 5</string>
    <string name="btn_day6">Ngày 6</string>
    <string name="btn_day7">Ngày 7</string>
    <string name="settingaccountactivity_btn">Lưu</string>

    <!-- Day -->
</resources>