<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.EditActivity"
    android:orientation="vertical"
    android:gravity="center">

    <VideoView
        android:id="@+id/videoview_edit"
        android:layout_width="384dp"
        android:layout_height="216dp">

    </VideoView>

    <ImageView
        android:id="@+id/imgview_edit"
        android:layout_marginTop="20dp"
        android:layout_width="192dp"
        android:layout_height="108dp">

    </ImageView>

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/edt_videoname_edit"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/edit_edt_hintname">

    </EditText>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_challenge_edit"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_calo_edit"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:hint="@string/edit_edt_hintcalo"
            android:inputType="number">

        </EditText>

    </LinearLayout>


    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/button_upload_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_btn_upload"
        android:textSize="15dp">

    </Button>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_chooseVideo_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_btn_choosevideo"
            android:onClick="ChooseVideo"
            android:textStyle="bold"
            android:textSize="15dp"
            tools:ignore="OnClick"
            android:layout_marginRight="30dp">

        </Button>

        <Button
            android:id="@+id/btn_chooseImage_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_btn_chooseimage"
            android:onClick="ChooseImage"
            android:textStyle="bold"
            android:textSize="15dp"
            tools:ignore="OnClick">

        </Button>

    </LinearLayout>



    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progressBar_edit"
        android:layout_marginTop="20dp"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/holo_orange_dark"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal">

    </ProgressBar>

</LinearLayout>